task #1: large file dump

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,10 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import 'partials/colors';
 
+@import 'partials/headings';
+@import 'partials/footer';
+@import 'partials/jumbotron';
+@import 'partials/autocomplete';
+@import 'partials/accordian';
+@import 'partials/misc';
+@import 'partials/materialFullCalendar';
+@import 'partials/carousel';
