--- a/public/css/all.css
+++ b/public/css/all.css
@@ -198,8 +198,7 @@ h3.margin-class-name {
   /* reset the changed properties of parent */
   color: white;
   -webkit-transform: translate(-50%, 0%);
-      -ms-transform: translate(-50%, 0%);
-          transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
   /* to make it centered */ }
 
 #fixed-button:empty::before {
@@ -259,6 +258,13 @@ h3.margin-class-name {
 #curve_chart {
   width: 100%;
   height: 500px; }
+
+#curve_chart_2 {
+  width: 100%;
+  height: 500px; }
+
+.btn.save-schedule {
+  margin: -3px -8px; }
 
 /*
 
@@ -452,4 +458,5 @@ body {
     margin-top: 120px; } }
 
 /*# sourceMappingURL=app.css.map */
+
 /*# sourceMappingURL=all.css.map */
