task #16: I did stuff

--- a/resources/assets/sass/partials/_materialFullCalendar.scss
+++ b/resources/assets/sass/partials/_materialFullCalendar.scss
@@ -49,8 +49,8 @@ Colors: Use the following - https://www.google.com/design/spec/style/color.html#
   border: none;
   padding: 5px;
   opacity: .65;
-  left: 5% !important;
-  right: 5% !important;
+//  left: 5% !important;
+//  right: 5% !important;
 }
 
 /* Bolds the name of the event and inherits the font size */
