--- a/public/css/app.css
+++ b/public/css/app.css
@@ -312,9 +312,7 @@ Colors: Use the following - https://www.google.com/design/spec/style/color.html#
   border-radius: 4px;
   border: none;
   padding: 5px;
-  opacity: .65;
-  left: 5% !important;
-  right: 5% !important; }
+  opacity: .65; }
 
 /* Bolds the name of the event and inherits the font size */
 .fc-event {
